<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/toolbar_color"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/img_back"
            android:layout_width="@dimen/toolbar_height"
            android:layout_height="@dimen/toolbar_height"
            android:gravity="center_vertical">

            <ImageView
                style="@style/ImgBack"
                android:contentDescription="@string/image_back"/>
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/toolbar_textsize"
            android:text="@string/search_movie_label"
            android:layout_weight="1" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/etxt_background">

        <EditText
            android:id="@+id/etxt_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_et_height"
            android:layout_marginStart="@dimen/search_et_padding"
            android:layout_marginEnd="@dimen/search_et_height"
            android:background="@null"
            android:drawableStart="@drawable/outline_search_white_24"
            android:drawablePadding="@dimen/search_et_padding"
            android:hint="@string/search_hint"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/search_et_textsize" />

        <ProgressBar
            android:id="@+id/prg_search_movies"
            style="@style/ProgressBar"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/prg_margin_e" />

        <LinearLayout
            android:id="@+id/lyt_btn_close"
            android:layout_width="@dimen/search_et_height"
            android:layout_height="@dimen/search_et_height"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/prg_size"
                android:layout_height="@dimen/prg_size"
                android:src="@drawable/outline_close_white_24"
                android:contentDescription="@string/search_close_button_image"/>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_no_data"
        style="@style/TxtError"
        android:layout_marginTop="@dimen/search_txt_no_data_margin_t"
        android:text="@string/no_search_data"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>