...
    </fragment>
    <fragment
        android:id="@+id/movieSearchFragment"
        android:name="com.example.movieflix.presentation.ui.moviesearch.MovieSearchFragment"
        android:label="Search" />
    <activity
        android:id="@+id/movieDetailActivity"
        android:name="com.example.movieflix.presentation.ui.moviedetail.MovieDetailActivity"
        android:label="activity_movie_detail"
        tools:layout="@layout/activity_movie_detail" />
    <fragment
        android:id="@+id/seriesListFragment"
        android:name="com.example.movieflix.presentation.ui.serielist.SeriesListFragment"
...
    </fragment>
    <fragment
        android:id="@+id/serieSearchFragment"
        android:name="com.example.movieflix.presentation.ui.seriesearch.SerieSearchFragment"
        android:label="SerieSearchFragment" />
    <activity
        android:id="@+id/serieDetailActivity"
        android:name="com.example.movieflix.presentation.ui.seriedetail.SerieDetailActivity"
        android:label="SerieDetailActivity" />
</navigation>
